Fix for buttons with a type='button' attribute rendering incorrectly on ios

--- a/assets/css/app/custom.scss
+++ b/assets/css/app/custom.scss
@@ -764,3 +764,9 @@ a.btn.btn-secondary:hover {
     background-color: #444444;
     color: white;
 }
+#wrapper #jumbotron a.btn {
+    -webkit-appearance: none;
+}
+#wrapper div#github_controls a.btn {
+    -webkit-appearance: none;
+}
